dark mode font color issue fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -199,6 +199,42 @@ blockquote {
   color: var(--global-text-color);
 }
 
+// YJ, talks
+.talks td {
+  color: var(--global-text-color);
+}
+
+.talks th {
+  color: var(--global-text-color);
+}
+
+// YJ, honors
+.honors td {
+  color: var(--global-text-color);
+}
+
+.honors th {
+  color: var(--global-text-color);
+}
+
+// YJ, service
+.service td {
+  color: var(--global-text-color);
+}
+
+.service th {
+  color: var(--global-text-color);
+}
+
+// YJ, teaching
+.teaching td {
+  color: var(--global-text-color);
+}
+
+.teaching th {
+  color: var(--global-text-color);
+}
+
 // Social (bottom)
 
 .social {
